# waybar-weather

./: .gitignore  CMakeLists.txt  README.md  build.sh  weather-click.sh
include/: data.h  location.h  weather.h
src/: data.cpp  location.cpp  main.cpp  weather.cpp
